# teamfyp

./: .env  .python-version  Golden_Dataset.xlsx  Golden_Dataset_Latest.xlsx  Granite_Docling_RAG (5).ipynb  Granite_Docling_RAG.ipynb  OLLAMA_SETUP.md  README.md  apikey.json  chat_history.json  chatbot.py  chatbot2.py  chatbot_Final.py  docling_util.py  docling_util_baseline.py  docling_util_exp.py  extracted_context.txt  fyp_app5.py  fyp_app52.py  gemini_vision.py  pyproject.toml  query_util.py  query_util8.py  query_util_FCexp1.py  query_util_Final.py  query_util_baseline.py  query_util_exp.py  query_util_exp1.py  query_util_exp2.py  query_util_exp3.py  query_util_exp4.py  query_util_exp5.py  query_util_exp6.py  rag_annual_report.ipynb  ragas_example.ipynb  requirements.txt
chat_sessions/: chat_names.json  default_chat.json  default_files.json
chroma_db/c80ca1c4-ba31-4081-b2e9-cec1ab2abbd7/: index_metadata.pickle
output_md/: Singapura Finance - Annual Report 2020.md  Singapura Finance - Annual Report 2021.md  Singapura Finance - Annual Report 2022.md  Singapura Finance - Annual Report 2023.md
output_md - Copy/: Great Eastern - Annual Report 2020.md  Singapura Finance - Annual Report 2020.md  Singapura Finance - Annual Report 2021.md  Singapura Finance - Annual Report 2022.md  Singapura Finance - Annual Report 2023.md
pages/: _chat_20251204_210330.py  _chat_20251204_210347.py  _chat_20251204_211429.py  _chat_default.py  app.py  create.py  delete.py  main_page.py
tagging-system/: .env.example  README.md  package.json
tagging-system/scripts/: migrate.ts
tagging-system/src/: app.ts  index.ts
tagging-system/src/controllers/: tagController.ts
tagging-system/src/db/: index.ts
tagging-system/src/middlewares/: auth.ts
tagging-system/src/models/: tag.ts
tagging-system/src/repositories/: tagRepository.ts
tagging-system/src/routes/: tagRoutes.ts
tagging-system/tests/: tag.test.ts
(+3 files in other folders)
