[project]
name = "fyp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "docling>=2.61.2",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
]
