# using python 3.13, have dependencies - docling, ibm-watsonx-ai, langchain, langchain-chroma 
[project]
name = "test-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "chromadb>=1.3.5",
    "datasets>=4.4.2",
    "docling>=2.61.2",
    "dotenv>=0.9.9",
    "google-api-core>=2.25.2",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-generativeai>=0.8.5",
    "ibm-watsonx-ai>=1.4.7",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.0.5",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-docling>=2.0.0",
    "langchain-huggingface>=1.1.0",
    "langchain-ibm>=1.0.1",
    "langchain-ollama>=1.0.1",
    "pandas>=2.2.3",
    "ragas>=0.4.2",
    "sentence-transformers>=5.1.2",
]
